--- a/src/app/main-content/my-work/my-work.component.html
+++ b/src/app/main-content/my-work/my-work.component.html
@@ -1,20 +1,19 @@
 <section>
-<div class="main_content_container">
-    <div class="headline_container" >
-        <img class="circle_1" src="./assets/img/o-mitte.svg" alt="">
-        <img class="circle_2" src="./assets/img/o-mitte.svg" alt="">
-        <img class="circle_3" src="./assets/img/o-mitte.svg" alt="">
-        <img class="circle_4" src="./assets/img/o-mitte.svg" alt="">
-        <img class="circle_5" src="./assets/img/o-mitte.svg" alt="">
-        <img class="circle_6" src="./assets/img/o-mitte.svg" alt="">
-      <h1 class="baloo">{{ "meineProjekte.title" | translate}}</h1>
+  <div class="main_content_container">
+    <div class="headline_container">
+      <img class="circle_1" src="./assets/img/o-mitte.svg" alt="" />
+      <img class="circle_2" src="./assets/img/o-mitte.svg" alt="" />
+      <img class="circle_3" src="./assets/img/o-mitte.svg" alt="" />
+      <img class="circle_4" src="./assets/img/o-mitte.svg" alt="" />
+      <img class="circle_5" src="./assets/img/o-mitte.svg" alt="" />
+      <img class="circle_6" src="./assets/img/o-mitte.svg" alt="" />
+      <h1 class="baloo">{{ "meineProjekte.title" | translate }}</h1>
     </div>
     <span class="montserrat">
-       {{ "meineProjekte.text" | translate}}
+      {{ "meineProjekte.text" | translate }}
     </span>
     <div class="project">
       <app-project></app-project>
     </div>
   </div>
-
 </section>
