--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,19 +1,31 @@
 <footer>
-    <div class="footer_container">
+  <div class="footer_container">
     <div class="footer">
-        <a  href="#landingPage"><img class="logo_footer" src="./assets/img/S.svg" alt=""></a>
-        <span class="montserrat">
-            ⒸMevlida Salendrkovic 2024 
-        </span>
-        <div class="icons_footer">
-            <a href="https://github.com/mevlidaS" target="_blank"><img src="./assets/img/github_white.svg" alt=""></a>
-            <a href="mailto:mevlida.salendrkovic@gmail.com"><img src="./assets/img/email_white.svg" alt=""></a>
-            <a href="https://www.linkedin.com/in/mevlida-salendrkovic/" target="_blank"><img src="./assets/img/linkedin_white.svg" alt=""></a>
-        </div>
+      <a href="#landingPage"
+        ><img class="logo_footer" src="./assets/img/S.svg" alt=""
+      /></a>
+      <span class="montserrat"> ⒸMevlida Salendrkovic 2024 </span>
+      <div class="icons_footer">
+        <a href="https://github.com/mevlidaS" target="_blank"
+          ><img src="./assets/img/github_white.svg" alt=""
+        /></a>
+        <a href="mailto:mevlida.salendrkovic@gmail.com"
+          ><img src="./assets/img/email_white.svg" alt=""
+        /></a>
+        <a
+          href="https://www.linkedin.com/in/mevlida-salendrkovic/"
+          target="_blank"
+          ><img src="./assets/img/linkedin_white.svg" alt=""
+        /></a>
+      </div>
     </div>
     <div class="imprint_container">
-        <a class="montserrat" style="font-size: 18px;" [routerLink]="['/imprint']">{{ "footer.imprint" | translate}}</a>
+      <a
+        class="montserrat"
+        style="font-size: 18px"
+        [routerLink]="['/imprint']"
+        >{{ "footer.imprint" | translate }}</a
+      >
     </div>
-</div>
-    
+  </div>
 </footer>
