--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,20 +1,34 @@
 <div class="background_container">
-    <app-header></app-header>
-<div class="imprint-container">
-    <img class="background-img " src="./assets/img/o-mitte.svg" alt="">
-    <img class="background-img1 " src="./assets/img/o-mitte.svg" alt="">
+  <app-header></app-header>
+  <div class="imprint-container">
+    <img class="background-img" src="./assets/img/o-mitte.svg" alt="" />
+    <img class="background-img1" src="./assets/img/o-mitte.svg" alt="" />
 
-    <h1>{{ "imprint.title" | translate}}</h1><p>{{ "imprint.text" | translate}}</p><p>Mevlida Salendrkovic <br>
-    Pelkovenstr. 77<br> 
-    80992 München <br> 
-    </p><p> <strong>{{ "imprint.vetretenDurch" | translate}}:</strong> <br>
-    Mevlida Salendrkovic<br>
-    </p><p><strong>{{ "imprint.kontakt" | translate}}:</strong></p> <br>
-    <p>{{ "imprint.telefon" | translate}}: 0157-79434942</p>
-    <p>E-Mail:<a href='mailto:mevlida.salendrkovic@gmail.com'>mevlida.salendrkovic&#64;gmail.com</a><br>
-</p><br> 
-   <p>Website Impressum von <a href="https://www.impressum-generator.de">impressum-generator.de</a></p> 
-     </div>
-
-    </div>
-     
+    <h1>{{ "imprint.title" | translate }}</h1>
+    <p>{{ "imprint.text" | translate }}</p>
+    <p>
+      Mevlida Salendrkovic <br />
+      Pelkovenstr. 77<br />
+      80992 München <br />
+    </p>
+    <p>
+      <strong>{{ "imprint.vetretenDurch" | translate }}:</strong> <br />
+      Mevlida Salendrkovic<br />
+    </p>
+    <p>
+      <strong>{{ "imprint.kontakt" | translate }}:</strong>
+    </p>
+    <br />
+    <p>{{ "imprint.telefon" | translate }}: 0157-79434942</p>
+    <p>
+      E-Mail:<a href="mailto:mevlida.salendrkovic@gmail.com"
+        >mevlida.salendrkovic&#64;gmail.com</a
+      ><br />
+    </p>
+    <br />
+    <p>
+      Website Impressum von
+      <a href="https://www.impressum-generator.de">impressum-generator.de</a>
+    </p>
+  </div>
+</div>
