--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,23 +1,12 @@
-<!-- <div>
-    <img class="circle" src="./assets/img/o-mitte.svg" alt="">
-    <span class="baloo">{{"aboutMe.title" | translate}}</span>
-    <div>
-        <img class="circle_small" src="./assets/img/o-mitte.svg" alt="">
-        <p class="montserrat">
-            {{"aboutMe.description" | translate}}
-        </p>
-        <a class="poppins">{{"aboutMe.button" | translate}}</a> 
-    </div>
-</div> -->
-
-
 <div class="aboute-me-container">
-    <img src="./assets/img/o-mitte.svg" alt="">
-    <span class="baloo">{{"aboutMe.title" | translate}}</span>
-    <div>
-        <p class="montserrat">
-            {{"aboutMe.description" | translate}}
-        </p>
-        <a  [routerLink]="['/contact']" class="poppins">{{"aboutMe.button" | translate}}</a> 
-    </div>
+  <img src="./assets/img/o-mitte.svg" alt="" />
+  <span class="baloo">{{ "aboutMe.title" | translate }}</span>
+  <div>
+    <p class="montserrat">
+      {{ "aboutMe.description" | translate }}
+    </p>
+    <a [routerLink]="['/contact']" class="poppins">{{
+      "aboutMe.button" | translate
+    }}</a>
+  </div>
 </div>
