--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -1,142 +1,137 @@
-
 .aboute-me-container {
-    max-width: 1440px;
-    width: 100%;
-    padding: 200px 100px;
-    margin: 0 auto;
+  max-width: 1440px;
+  width: 100%;
+  padding: 200px 100px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 50px;
+  position: relative;
+  animation: opacityAnimation linear forwards;
+  animation-timeline: scroll();
+  animation-range: contain;
+
+  > img {
+    width: 82px;
+    height: 82px;
+    position: absolute;
+    right: 20%;
+    top: 80px;
+  }
+
+  > span {
+    font-size: 121px;
+    font-weight: 900;
+    line-height: 121px;
+    color: #ff5959;
+    font-family: "Baloo 2";
+    width: 50%;
+    word-wrap: break-word;
+  }
+
+  > div {
+    flex: 1;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    gap: 50px;
-   position: relative;
-    animation: opacityAnimation linear forwards;
-    animation-timeline: scroll();
-    animation-range: contain;
+    gap: 20px;
 
-    >img {
-        width: 82px;
-        height: 82px;
-        position: absolute;
-        right: 20%;
-        top: 80px;
+    > p {
+      font-size: 23px;
+      line-height: 27px;
+      width: 500px;
     }
 
-    >span {
-        font-size: 121px;
-        font-weight: 900;
-        line-height: 121px;
-        color:#FF5959;
-        font-family: 'Baloo 2';
-        width: 50%;
-        word-wrap: break-word;
+    > a {
+      text-decoration: none;
+      border: 2px solid #ff5959;
+      border-radius: 10px;
+      background-color: white;
+      color: #ff5959;
+      padding: 15px 15px;
+      font-size: 23px;
+      box-shadow: 5px 5px 15px 0px #00000026;
+      cursor: pointer;
+
+      &:hover {
+        &:hover {
+          animation: gradient-animation 0.05s ease-in-out forwards;
+          color: white;
+          transform: scale(1.1);
+          background: radial-gradient(
+            74.22% 74.22% at 19.79% 22.42%,
+            #ff5959 6.25%,
+            #ff5959 51.56%,
+            #de0000 100%
+          );
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1670px) {
+  .aboute-me-container {
+    padding: 100px 50px;
+
+    > img {
+      top: 30px;
+    }
+  }
+}
+
+@media (max-width: 1560px) {
+  .aboute-me-container {
+    padding: 100px 0;
+  }
+}
+
+@media (max-width: 1360px) {
+  .aboute-me-container {
+    span {
+      font-size: 80px;
+      line-height: 80px;
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  .aboute-me-container {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+}
+
+@media (max-width: 850px) {
+  .aboute-me-container {
+    span {
+      font-size: 56px;
+      line-height: 50px;
+    }
+    div {
+      p {
+        font-size: 18px;
+      }
+    }
+  }
+}
+
+@media (max-width: 550px) {
+  .aboute-me-container {
+    span {
+      width: 100%;
+      font-size: 40px;
+      text-align: center;
     }
 
-    >div {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
-
-        >p {
-            font-size: 23px;
-            line-height: 27px;
-            width: 500px;
-        }
-
-        >a {
-            text-decoration: none;
-            border: 2px solid #FF5959;
-            border-radius: 10px;
-            background-color: white;
-            color: #FF5959;
-            padding: 15px 15px;
-            font-size: 23px;
-            box-shadow: 5px 5px 15px 0px #00000026;
-            cursor: pointer;
-
-            &:hover {
-                &:hover{
-                    animation: gradient-animation 0.05s ease-in-out forwards;
-                    color: white;
-                    transform: scale(1.1);
-                    background: radial-gradient(74.22% 74.22% at 19.79% 22.42%, #FF5959 6.25%, #FF5959 51.56%, #DE0000 100%)
-            }
-        }
+    div {
+      p {
+        width: 100%;
+        text-align: center;
+        font-size: 14px;
+      }
     }
-
-}
-}
-
-@media(max-width:1670px){
-
-    .aboute-me-container {
-        padding: 100px 50px;
-
-        >img {
-            top:30px;
-        }
-    }
-
-}
-
-@media(max-width:1560px){
-    .aboute-me-container {
-        padding: 100px 0;
-    }
-}
-
-@media(max-width: 1360px){
-
-    .aboute-me-container {
-        span{
-            font-size: 80px;
-            line-height: 80px;
-        }
-
-        }
-
-}
-
-@media(max-width: 1000px){
-    .aboute-me-container {
-        flex-direction: column;
-        align-items: center;
-        gap: 30px;
-    }
-}
-
-@media(max-width: 850px){
-
-    .aboute-me-container {
-        span{
-            font-size: 56px;
-            line-height: 50px;
-        }
-        div{
-            p{
-                font-size: 18px;
-            }
-        }
-      
-}
-}
-
-@media(max-width: 550px){
-
-    .aboute-me-container {
-        span{
-            width:100%;
-            font-size: 40px;
-            text-align: center;
-        }
-
-        div{
-            p{
-                width: 100%;
-                text-align: center;
-                font-size: 14px;
-            }
-        }
-    }
+  }
 }
