--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -1,417 +1,381 @@
-section{
+section {
+  width: 100%;
+  background: linear-gradient(179.99deg, #ffffff 12.89%, #ffeaea 91.39%);
+
+  .main_content_container {
+    max-width: 1440px;
+    margin: 0 auto;
     width: 100%;
-    background: linear-gradient(179.99deg, #FFFFFF 12.89%, #FFEAEA 91.39%);
-
-    .main_content_container{
-        max-width: 1440px;
-        margin: 0 auto;
-        width: 100%;
-    }
-
-
-    h1{     
-        font-size: 90px;
-        font-weight: 800;
-        line-height: 108px;
-        text-align: left;
-        color: #FF5959;
-        padding-left: 100px;
-        margin-block-end: 0.47em;
-
-    }
-
-    form{
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-        gap: 22px;
-    }
-
-
-    .contact_container{
-        display: flex;
-        justify-content: center;
-        align-items: baseline;
-        padding-left: 100px;
-        padding-right: 100px;
-        padding-bottom: 70px;
-        gap: 150px;
-        margin: 0 auto;
-      
-
-
-        h2{
-            
-            font-weight: 700;
-            font-size: 32px;
-            line-height: 38.4px;
-            text-align: left;
-            color: #FF5959;
-            margin-block-start: 0em;
-            margin-block-end: 0.83em;
-
-        }
-
-        .p{
-            
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 19.2px;
-            text-align: left;
-            color: #FF5959;
-
-        }
-
-        .contact_text{
-            width: 50%;
-        }
-
-        input{
-            width: 500px;
-            height: auto;
-            padding: 15px 25px 15px 25px;
-            gap: 10px;
-            border-radius: 10px;
-            border: 1px solid #FF5959;
-            opacity: 0px;
-            font-family: 'Montserrat';
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 19.2px;
-            text-align: left;
-            outline: none;
-            cursor: pointer;
-
-            &:hover{
-                border: 2px solid #FF5959;
-            }
-
-            &:focus{
-                border: 2px solid #FF5959;
-            }
-
-
-    }
-
-    .contact_form{
-        width: 50%;
-    }
-
-    textarea{
-            width: 500px;
-            height: 202px;
-            padding: 15px 25px 15px 25px;
-            gap: 10px;
-            border-radius: 10px;
-            border: 1px solid #FF5959;
-            opacity: 0px;
-            font-family: 'Montserrat';
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 19.2px;
-            text-align: left;
-            cursor: pointer;
-            outline: none;
-
-            &:focus{
-                border: 1px solid #FF5959;
-            }
-
-            &:hover{
-                border: 2px solid #FF5959;
-            }
-
-
-    }
-
-    }
-}
-.privacy-policy{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-
-    .span{
-        font-family: 'Montserrat';
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 16.8px;
-        text-align: left;
-        width: 400px;
-
-    }
-
-    .button-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-        margin-top: 20px;
-    }
-
-    a{
-        text-decoration: none;
-        color: #FF5959;
-        cursor: pointer;
-
-        &:hover{
-            text-decoration: underline;
-            font-weight: 700;
-        }
-    }
-}
-
-
-
-.button_disabled{
-    width: auto;
-    padding: 15px 30px 15px 30px;
-    height: 58px;
-    gap: 10px;
-    border-radius: 10px;
-    border: 2px 0px 0px 0px;
-    opacity: 0px;
-    border: 2px solid #BBBBBB;
-    box-shadow: 5px 5px 15px 0px #00000026;
-    cursor: pointer;
-    font-family: 'Montserrat';
-    font-size: 23px;
-    color:#BBBBBB;
-
-}
-
-.button_enabled{
-    width: auto;
-    padding: 15px 30px 15px 30px;
-    height: 58px;
-    gap: 10px;
-    border-radius: 10px;
-    border: 2px 0px 0px 0px;
-    opacity: 0px;
-    border: 2px solid #FF5959;
-    box-shadow: 5px 5px 15px 0px #00000026;
-    cursor: pointer;
-    font-family: 'Montserrat';
-    font-size: 23px;
-    color:#FF5959;
-
-    &:hover{
-        animation: gradient-animation 0.05s ease-in-out forwards;
-        color: white;
-        transform: scale(1.1);
-        background: radial-gradient(74.22% 74.22% at 19.79% 22.42%, #FF5959 6.25%, #FF5959 51.56%, #DE0000 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
-
-    }
-
-}
-
-
-
-.go_up_container{
-    display: flex;
-    justify-content: space-between;
-    padding-right: 100px;
-    padding-left: 100px;
-    padding-bottom: 10px;
-
-    a{
-        text-decoration: none;
-        background-image: url(./../../../assets/img/goupbuttondefault.svg);
-        width: 25px;
-        height: 25px;
-        background-size: cover;
-        background-repeat: no-repeat;
-        padding: 10px;
-
-        &:hover{
-            background-image: url(./../../../assets/img/goupbuttonhover.svg);
-        }
-    }
-
-    img{
-        right: 100px;
-    }
-}
-
-.error-message {
-    width: 100%;
-    font-size: 14px;
-    font-family: 'Montserrat';
-    color: #E61C40;
-    margin-top: -20px;
-    // margin-left: 50px;
-}
-
-.flex_column_container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 22px;
-
-    
-}
-
-.popup_background {
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    z-index: 5;
-    left: 0;
-    top: 0;
-    background-color: linear-gradient(179.99deg, #FFFFFF 12.89%, #FFEAEA 91.39%);
-    overflow: hidden;
-    transition: 0.5s;
-    font-size: 24px;
-    font-family: 'Montserrat';
-    color: #FF5959;
-    .popup {
-      position: relative;
-      top: 25%;
-      width: 100%;
-      text-align: center;
-      margin-top: 30px;
-    }
   }
 
-  .checkbox {
-    width: 18px;
-    height: 18px;
+  h1 {
+    font-size: 90px;
+    font-weight: 800;
+    line-height: 108px;
+    text-align: left;
+    color: #ff5959;
+    padding-left: 100px;
+    margin-block-end: 0.47em;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 22px;
+  }
+
+  .contact_container {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 70px;
+    gap: 150px;
+    margin: 0 auto;
+
+    h2 {
+      font-weight: 700;
+      font-size: 32px;
+      line-height: 38.4px;
+      text-align: left;
+      color: #ff5959;
+      margin-block-start: 0em;
+      margin-block-end: 0.83em;
+    }
+
+    .p {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 19.2px;
+      text-align: left;
+      color: #ff5959;
+    }
+
+    .contact_text {
+      width: 50%;
+    }
+
+    input {
+      width: 500px;
+      height: auto;
+      padding: 15px 25px 15px 25px;
+      gap: 10px;
+      border-radius: 10px;
+      border: 1px solid #ff5959;
+      opacity: 0px;
+      font-family: "Montserrat";
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 19.2px;
+      text-align: left;
+      outline: none;
+      cursor: pointer;
+
+      &:hover {
+        border: 2px solid #ff5959;
+      }
+
+      &:focus {
+        border: 2px solid #ff5959;
+      }
+    }
+
+    .contact_form {
+      width: 50%;
+    }
+
+    textarea {
+      width: 500px;
+      height: 202px;
+      padding: 15px 25px 15px 25px;
+      gap: 10px;
+      border-radius: 10px;
+      border: 1px solid #ff5959;
+      opacity: 0px;
+      font-family: "Montserrat";
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 19.2px;
+      text-align: left;
+      cursor: pointer;
+      outline: none;
+
+      &:focus {
+        border: 1px solid #ff5959;
+      }
+
+      &:hover {
+        border: 2px solid #ff5959;
+      }
+    }
+  }
+}
+.privacy-policy {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  .span {
+    font-family: "Montserrat";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.8px;
+    text-align: left;
+    width: 400px;
+  }
+
+  .button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+  }
+
+  a {
+    text-decoration: none;
+    color: #ff5959;
     cursor: pointer;
 
     &:hover {
-        filter: drop-shadow(0px 0px 5px #FF5959);
+      text-decoration: underline;
+      font-weight: 700;
+    }
+  }
+}
+
+.button_disabled {
+  width: auto;
+  padding: 15px 30px 15px 30px;
+  height: 58px;
+  gap: 10px;
+  border-radius: 10px;
+  border: 2px 0px 0px 0px;
+  opacity: 0px;
+  border: 2px solid #bbbbbb;
+  box-shadow: 5px 5px 15px 0px #00000026;
+  cursor: pointer;
+  font-family: "Montserrat";
+  font-size: 23px;
+  color: #bbbbbb;
+}
+
+.button_enabled {
+  width: auto;
+  padding: 15px 30px 15px 30px;
+  height: 58px;
+  gap: 10px;
+  border-radius: 10px;
+  border: 2px 0px 0px 0px;
+  opacity: 0px;
+  border: 2px solid #ff5959;
+  box-shadow: 5px 5px 15px 0px #00000026;
+  cursor: pointer;
+  font-family: "Montserrat";
+  font-size: 23px;
+  color: #ff5959;
+
+  &:hover {
+    animation: gradient-animation 0.05s ease-in-out forwards;
+    color: white;
+    transform: scale(1.1);
+    background: radial-gradient(
+        74.22% 74.22% at 19.79% 22.42%,
+        #ff5959 6.25%,
+        #ff5959 51.56%,
+        #de0000 100%
+      )
+  }
+}
+
+.go_up_container {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 100px;
+  padding-left: 100px;
+  padding-bottom: 10px;
+
+  a {
+    text-decoration: none;
+    background-image: url(./../../../assets/img/goupbuttondefault.svg);
+    width: 25px;
+    height: 25px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 10px;
+
+    &:hover {
+      background-image: url(./../../../assets/img/goupbuttonhover.svg);
     }
   }
 
-  
-  @media(max-width:1670px){
-    .go_up_container{
-        a{
-            top: 5000px;
-        }
+  img {
+    right: 100px;
+  }
+}
+
+.error-message {
+  width: 100%;
+  font-size: 14px;
+  font-family: "Montserrat";
+  color: #e61c40;
+  margin-top: -20px;
+}
+
+.flex_column_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 22px;
+}
+
+.popup_background {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 5;
+  left: 0;
+  top: 0;
+  background-color: linear-gradient(179.99deg, #ffffff 12.89%, #ffeaea 91.39%);
+  overflow: hidden;
+  transition: 0.5s;
+  font-size: 24px;
+  font-family: "Montserrat";
+  color: #ff5959;
+  .popup {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
+}
+
+.checkbox {
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+
+  &:hover {
+    filter: drop-shadow(0px 0px 5px #ff5959);
+  }
+}
+
+@media (max-width: 1670px) {
+  .go_up_container {
+    a {
+      top: 5000px;
     }
   }
-
-  @media(max-width:1170px){
-
-    section{
-        .contact_container{
-            input{
-                width:300px;
-            }
-
-            textarea{
-                width: 300px;
-            }
-        }
-        
-       
-    }
 }
 
-@media(max-width:880px){
+@media (max-width: 1170px) {
+  section {
+    .contact_container {
+      input {
+        width: 300px;
+      }
 
-    section{
-        .contact_container{
-            gap:50px;
-        }
+      textarea {
+        width: 300px;
+      }
     }
+  }
 }
 
-@media(max-width: 860px){
-    section{
-        .contact_container{
-            flex-direction: column;
-            gap: 50px;
-            position:relative;
+@media (max-width: 880px) {
+  section {
+    .contact_container {
+      gap: 50px;
+    }
+  }
+}
 
-            input,textarea{
-                width: 500px;
+@media (max-width: 860px) {
+  section {
+    .contact_container {
+      flex-direction: column;
+      gap: 50px;
+      position: relative;
 
+      input,
+      textarea {
+        width: 500px;
+      }
+      .contact_text {
+        width: 100%;
 
-            }
-            .contact_text{
-                width: 100%;
-
-                img{
-                    display: none;
-                }
-            }
-
-            .contact_form{
-                width: 100%;
-            }
+        img {
+          display: none;
         }
+      }
 
-        .go_up_container{
-            img{
-                display: none;
-            }
+      .contact_form {
+        width: 100%;
+      }
     }
 
-   
-}
-  
-}
-
-@media(max-width:700px){
-
-    section{
-        .contact_container{
-            input{
-                width: 300px;
-            }
-
-            textarea{
-                width: 300px;
-            }
-        }
+    .go_up_container {
+      img {
+        display: none;
+      }
     }
+  }
 }
 
-@media(max-width:480px){
+@media (max-width: 700px) {
+  section {
+    .contact_container {
+      input {
+        width: 300px;
+      }
 
-    section{
-
-        .contact_container{
-            padding-left: 50px;
-            padding-right: 50px;
-        }
-       
-        h1{
-            font-size: 50px;
-            line-height: 50px;
-            padding-left: 50px;
-        }
-
-        span{
-            font-size: 14px;
-        }
-        }
-
+      textarea {
+        width: 300px;
+      }
+    }
+  }
 }
 
-@media(max-width:430px){
+@media (max-width: 480px) {
+  section {
+    .contact_container {
+      padding-left: 50px;
+      padding-right: 50px;
+    }
 
-    section{
-       
-        .contact_container{
-            padding-left: 30px;
-            padding-right: 30px;
+    h1 {
+      font-size: 50px;
+      line-height: 50px;
+      padding-left: 50px;
+    }
 
-          
-            input{
-                width: 200px;
-            }
+    span {
+      font-size: 14px;
+    }
+  }
+}
 
-            textarea{
-                width: 200px;
-            }
-        }
-        h1{
-            padding-left: 30px;
-        }            
-            }
+@media (max-width: 430px) {
+  section {
+    .contact_container {
+      padding-left: 30px;
+      padding-right: 30px;
+
+      input {
+        width: 200px;
+      }
+
+      textarea {
+        width: 200px;
+      }
+    }
+    h1 {
+      padding-left: 30px;
+    }
+  }
 }
