--- a/src/app/main-content/my-work/project/project.component.scss
+++ b/src/app/main-content/my-work/project/project.component.scss
@@ -10,142 +10,137 @@
   position: relative;
   z-index: 1;
 
-
   .left_side {
     display: flex;
     width: 50%;
   }
-      
-      img {
-        height: 393px;
-        box-shadow: 5px 5px 15px 0px #00000026;
-        transition: transform 0.3s ease;
-        cursor: pointer;
 
-        &:hover {
-            transform: translateY(-50px) scale(0.8);
-        }
-      }
+  img {
+    height: 393px;
+    box-shadow: 5px 5px 15px 0px #00000026;
+    transition: transform 0.3s ease;
+    cursor: pointer;
+
+    &:hover {
+      transform: translateY(-50px) scale(0.8);
     }
+  }
+}
+.right_side {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  gap: 16px;
+  margin-bottom: 48px;
+  h2 {
+    color: #ff5959;
+    font-size: 45px;
+    margin-block-start: 0;
+    margin-block-end: 0;
+  }
+  h3 {
+    color: #ff5959;
+    font-weight: 400;
+    font-size: 23px;
+    margin-block-start: 0;
+    margin-block-end: 0;
+  }
+
+  p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.2px;
+    text-align: left;
+  }
+}
+
+.button_container {
+  display: flex;
+  align-items: center;
+  gap: 86px;
+
+  button {
+    width: 137px;
+    height: 65px;
+    background-color: white;
+    border: 2px solid #ff5959;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px 0px #00000026;
+    cursor: pointer;
+    font-size: 23px;
+    font-family: "Poppins";
+    font-weight: 400;
+    color: #ff5959;
+
+    &:hover {
+      animation: gradient-animation 0.05s ease-in-out forwards;
+      color: white;
+      transform: scale(1.1);
+      background: radial-gradient(
+          74.22% 74.22% at 19.79% 22.42%,
+          #ff5959 6.25%,
+          #ff5959 51.56%,
+          #de0000 100%
+        )
+        /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+    }
+  }
+}
+
+.reversed {
+  flex-direction: row-reverse;
+}
+
+@media (max-width: 1500px) {
+  .right_side {
+    width: 30%;
+  }
+
+  .left_side {
+    width: 70%;
+  }
+
+  .project_container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+@media (max-width: 1240px) {
+  .left_side {
+    img {
+      height: 300px;
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  .project_container {
+    flex-direction: column;
+    gap: 0;
+    height: auto;
+
     .right_side {
-      display: flex;
-      flex-direction: column;
-      width: 50%;
-      gap: 16px;
-      margin-bottom: 48px;
-      h2 {
-        color:#FF5959;
-        font-size: 45px;
-        margin-block-start: 0;
-        margin-block-end: 0;
-      }
-      h3 {
-        color:#FF5959;
-        ;
-        font-weight: 400;
-        font-size: 23px;
-        margin-block-start: 0;
-        margin-block-end: 0;
-      }
-
-      p{
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 19.2px;
-        text-align: left;
-        
-      }
+      width: 100%;
+      align-items: center;
+      margin-bottom: 0;
     }
-  
-  
-  .button_container {
-    display: flex;
-    align-items: center;
-    gap: 86px;
+    p {
+      text-align: center;
+    }
 
-    button {
-      width: 137px;
-      height: 65px;
-      background-color: white;
-      border: 2px solid #FF5959;
-      border-radius: 10px;
-      box-shadow: 5px 5px 15px 0px #00000026;
-      cursor: pointer;
-      font-size: 23px;
-      font-family: 'Poppins';
-      font-weight: 400;
-      color: #FF5959;
-
-        &:hover{
-               
-          animation: gradient-animation 0.05s ease-in-out forwards;
-          color: white;
-          transform: scale(1.1);
-          background: radial-gradient(74.22% 74.22% at 19.79% 22.42%, #FF5959 6.25%, #FF5959 51.56%, #DE0000 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
-
-
-      }
-
+    .left_side {
+      width: 80%;
+    }
   }
 }
-  
-  .reversed {
-    flex-direction: row-reverse;
-  }
 
-  @media(max-width: 1500px) {
-    .right_side{
-      width: 30%;
+@media (max-width: 610px) {
+  .project_container {
+    .left_side {
+      img {
+        height: 150px;
+      }
     }
-
-    .left_side{
-      width: 70%;
-    }
-
-    .project_container{
-      padding-left: 0;
-      padding-right: 0;
-    }
-  }
-
-  @media(max-width: 1240px) {
-.left_side{
-  img{
-    height: 300px;
   }
 }
-  }
-
-  @media(max-width: 1000px) {
-    .project_container {
-      flex-direction: column;
-      gap: 0;
-      height: auto;
-    
-      .right_side {
-        width: 100%;
-        align-items: center;
-        margin-bottom: 0;
-      }
-      p {
-        text-align: center;
-      }
-
-      .left_side {
-        width: 80%;
-      }
-    }
-  }
-
-  @media(max-width:610px) {
-    .project_container {
-      .left_side {
-        img{
-          height: 150px;
-        }
-      }
-        }
-    }
-  
-  
-  
