--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -1,67 +1,62 @@
-section{
-    background: linear-gradient(179.99deg, #FFFFFF 12.89%, #FFEAEA 91.39%);
-  p{
+section {
+  background: linear-gradient(179.99deg, #ffffff 12.89%, #ffeaea 91.39%);
+  p {
     margin-block-start: 0;
     margin-block-end: 0;
     font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
   }
 
-  h1{
+  h1 {
     font-size: 46px;
     font-weight: 800;
-    font-family: 'Baloo 2';
-    color: #FF5959;
+    font-family: "Baloo 2";
+    color: #ff5959;
     margin-block-start: 0;
     margin-block-end: 0;
-
   }
 
-  h2{
+  h2 {
     font-size: 32px;
     font-weight: 800;
-    font-family: 'Baloo 2';
-    color: #FF5959;
+    font-family: "Baloo 2";
+    color: #ff5959;
     margin-block-start: 0;
     margin-block-end: 0;
   }
 
-  h3{
+  h3 {
     font-size: 24px;
     font-weight: 800;
-    font-family: 'Baloo 2';
-    color: #FF5959;
+    font-family: "Baloo 2";
+    color: #ff5959;
     margin-block-start: 0;
     margin-block-end: 0;
   }
 
-  ul{
+  ul {
     font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
   }
-
-  
-
 }
 
 .privacy-policy-container {
-    width: 100%;
-    overflow: hidden;
-    margin: 0 auto;
-   
-    position: relative;
-   padding-top:220px;
-    padding-bottom: 50px;
+  width: 100%;
+  overflow: hidden;
+  margin: 0 auto;
+
+  position: relative;
+  padding-top: 220px;
+  padding-bottom: 50px;
 }
 
-
 .overflow-scroll-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    text-align: center
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  text-align: center;
 }
 .background-img {
   position: absolute;
@@ -70,19 +65,19 @@ section{
   width: 300px;
 }
 
-@media(max-width: 550px){
-  section{
-    h1{
-        font-size: 28px;
-        line-height: 32px;
+@media (max-width: 550px) {
+  section {
+    h1 {
+      font-size: 28px;
+      line-height: 32px;
     }
 
-    h2{
-        font-size: 24px;
-    } 
+    h2 {
+      font-size: 24px;
+    }
 
-    h3{
-        font-size: 20px;
+    h3 {
+      font-size: 20px;
     }
   }
 }
