--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,143 +1,137 @@
-footer{
-
-   
-    height: 291px;
+footer {
+  height: 291px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: radial-gradient(
+      71.18% 335.57% at 28.82% -124.4%,
+      #ff5959 6.25%,
+      #ff5959 51.56%,
+      #de0000 100%
+    )
+  
+  span {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: radial-gradient(71.18% 335.57% at 28.82% -124.4%, #FF5959 6.25%, #FF5959 51.56%, #DE0000 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
-
-    span{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        // gap: 10px;
-        color: white;
-        font-size: 24px;
-        font-weight: 400;
-        line-height: 24.2px;
-        text-align: center;
-    }
-
-   
+    color: white;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 24.2px;
+    text-align: center;
+  }
 }
 
-.footer{
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 69px;
+  width: 1440px;
+}
+
+.icons_footer {
+  display: flex;
+  gap: 20px;
+}
+
+.logo_footer {
+  width: 64px;
+  height: 64px;
+  border: 1px solid #ff5959;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.footer_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  a {
+    color: white;
+    cursor: pointer;
+    &:hover {
+      transform: scale(1.3);
+    }
+  }
+
+  .imprint_container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    height: 69px;
-    width: 1440px;
-}
 
-.icons_footer{
-    display: flex;
-    gap: 20px;
-}
+    a {
+      bottom: 0;
+      color: white;
+      text-decoration: none;
+      position: relative;
+      cursor: pointer;
 
-.logo_footer{
-        width: 64px;
-        height: 64px;
-        border:1px solid #FF5959;
-        border-radius: 50px;
-        cursor: pointer;
+      &::after {
+        content: "";
+        position: absolute;
+        width: 60%;
+        height: 2px;
+        bottom: -5px;
+        left: 0;
+        opacity: 0;
+        background-color: white;
+        transition: left 0.3s ease;
+      }
+
+      &:hover::after {
+        opacity: 1;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+
+      &:hover {
+        font-weight: 600;
+      }
     }
+  }
+}
 
-.footer_container{
-    display: flex;
+@media (max-width: 1460px) {
+  .footer {
+    width: 1240px;
+  }
+}
+
+@media (max-width: 1260px) {
+  .footer {
+    width: 1040px;
+  }
+}
+
+@media (max-width: 1060px) {
+  .footer {
+    width: 840px;
+  }
+}
+
+@media (max-width: 860px) {
+  .footer {
     flex-direction: column;
-    align-items: center;
-
-    a{
-        color: white;
-        cursor: pointer;
-            &:hover{
-                transform: scale(1.3);
-            }
-    }
-
-    .imprint_container{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    
-        a {
-            bottom: 0;
-            color: white;
-            text-decoration: none;
-            position: relative;
-            cursor: pointer;
-        
-    
-            &::after {
-                content: '';
-                position: absolute;
-                width: 60%;
-                height: 2px;
-                bottom: -5px;
-                left: 0;
-                opacity: 0;
-                background-color: white;
-                transition: left 0.3s ease;
-               
-            }
-    
-            &:hover::after {
-                opacity: 1;
-                left: 50%;
-                transform: translateX(-50%);
-                
-            }
-    
-            &:hover {
-                font-weight: 600;
-            
-            }
-        }
-    }
+    width: 440px;
+    gap: 20px;
+    height: auto;
+  }
 }
 
-
-@media(max-width:1460px){
-    .footer{
-        width: 1240px;
+@media (max-width: 460px) {
+  .footer {
+    width: 240px;
+    span {
+      font-size: 16px;
     }
-}
-
-@media(max-width:1260px){
-    .footer{
-        width: 1040px;
+    .imprint_container {
+      a {
+        font-size: 16px;
+      }
     }
-}
-
-@media(max-width:1060px){
-    .footer{
-        width: 840px;
-    }
-}
-
-@media(max-width:860px){
-    .footer{
-        flex-direction: column;
-        width: 440px;
-        gap:20px;
-        height: auto;
-
-    }
-}
-
-@media(max-width: 460px){
-    .footer{
-        width:240px;
-        span{
-            font-size: 16px;
-        }
-    .imprint_container{
-        a{
-            font-size:16px;
-        }
-    }
-}
+  }
 }
