--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -240,7 +240,7 @@ section {
   z-index: 5;
   left: 0;
   top: 0;
-  background-color: linear-gradient(179.99deg, #ffffff 12.89%, #ffeaea 91.39%);
+  background-color: #fffc;
   overflow: hidden;
   transition: 0.5s;
   font-size: 24px;
