--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -53,10 +53,9 @@ a {
   font-weight: 400;
   margin: 0 16px;
   font-family: "Montserrat", sans-serif;
-  // width: 120px;
-
+  
   &:hover {
-    font-weight: 700;
+    color: #de0000;
   }
 }
 
