--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -5,7 +5,7 @@
     <p class="montserrat">
       {{ "aboutMe.description" | translate }}
     </p>
-    <a [routerLink]="['/contact']" class="poppins">{{
+    <a href="#contact" class="poppins">{{
       "aboutMe.button" | translate
     }}</a>
   </div>
