--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -3,7 +3,10 @@
   <span class="baloo">{{ "aboutMe.title" | translate }}</span>
   <div>
     <p class="montserrat">
-      {{ "aboutMe.description" | translate }}
+      {{ "aboutMe.description1" | translate }}
+    </p>
+    <p class="montserrat">
+      {{ "aboutMe.description2" | translate }}
     </p>
     <a href="#contact" class="poppins">{{
       "aboutMe.button" | translate
