--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -1,6 +1,7 @@
 <section>
+  <!-- <img class="background-img" src="./assets/img/o-mitte.svg" alt="" /> -->
   <app-header></app-header>
-  <div class="landing_page_container">
+  <div class="landing_page_container" >
     <div style="position: relative">
       <img class="background-img" src="./assets/img/o-mitte.svg" alt="" />
       <img class="mevlida-img" src="./assets/img/mevlida.png" alt="" />
