--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -37,13 +37,13 @@
         "header.portfolio" | translate
       }}</a>
       <a
-        class=".a"
+        class=".a" style="cursor: pointer;"
         (click)="translate.switchLanguage('en')"
         (click)="closeMenu()"
         >EN</a
       >
       <a
-        class=".a"
+        class=".a" style="cursor: pointer;"
         (click)="translate.switchLanguage('de')"
         (click)="closeMenu()"
         >DE</a
