--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -7,10 +7,7 @@ section {
   max-width: 1440px;
   height: 100%;
   margin: 0 auto;
-  overflow: hidden;
-
   > div {
-    width: 100%;
     height: 100%;
     padding: 0 100px;
   }
@@ -18,9 +15,9 @@ section {
 
 .background-img {
   position: absolute;
-  top: -240px;
-  left: -200px;
-  width: 900px;
+  top: -71px;
+  left: -199px;
+  width: 892px;
   z-index: 0;
 }
 
@@ -29,7 +26,7 @@ section {
   height: 917px;
   position: absolute;
   bottom: 0;
-  left: 200px;
+  left: 0;
 }
 
 h1 {
@@ -38,10 +35,10 @@ h1 {
   position: absolute;
   top: 405px;
   // left: 100px;
-  right: 200px;
+  right: 0;
   font-size: 96px;
   font-weight: 800;
-  line-height: 110px;
+  line-height: 90px;
   letter-spacing: -0.025em;
   text-align: left;
   color: #ff5959;
@@ -50,12 +47,12 @@ h1 {
 }
 
 h2 {
-  width: 700px;
+  width: 645px;
   height: 61px;
   position: absolute;
   top: 327px;
   // left: 100px;
-  right: 150px;
+  right: 0;
   font-size: 48px;
   font-weight: 400;
   text-align: left;
@@ -73,8 +70,8 @@ P {
   width: 95px;
   height: 28px;
   position: absolute;
-  top: 780px;
-  right: 650px;
+  bottom: 250px;
+  right: 32%;
   gap: 0px;
   opacity: 0px;
   margin-block-start: 0;
@@ -98,7 +95,7 @@ P {
 .icons_github {
   position: absolute;
   bottom: 210px;
-  right: 350px;
+  left: 88%;
 
   &:hover {
     transform: translateX(-10px);
@@ -108,7 +105,7 @@ P {
 .icons_email {
   position: absolute;
   bottom: 140px;
-  right: 350px;
+  left:88%;
   &:hover {
     transform: translateX(-10px);
   }
@@ -117,7 +114,7 @@ P {
 .icons_linkedin {
   position: absolute;
   bottom: 70px;
-  right: 350px;
+  left:88%;
   &:hover {
     transform: translateX(-10px);
   }
@@ -128,7 +125,7 @@ P {
   height: 230px;
   position: absolute;
   bottom: 0;
-  right: 700px;
+  right: 35%;
   gap: 0px;
   border: 2px 0px 0px 0px;
   opacity: 0px;
@@ -140,25 +137,18 @@ P {
     h1 {
       font-size: 96px;
       width: 500px;
-      right: 320px;
+      right:0px;
     }
     h2 {
-      width: 500px;
+      width: 450px;
       font-size: 48px;
-      right: 320px;
-    }
-    .background-img {
-      width: 1000px;
-      left: -200px;
+      right: 50px;
     }
   }
 }
 
 @media (max-width: 1460px) {
   section {
-    .background-img {
-      width: 900px;
-    }
 
     .mevlida-img {
       left: 100px;
@@ -171,10 +161,12 @@ P {
     h1 {
       font-size: 56px;
       line-height: 50px;
+      right: 50px;
     }
 
     h2 {
       font-size: 40px;
+      right: 100px;
     }
 
     .mevlida-img {
@@ -195,14 +187,14 @@ P {
     }
 
     h2 {
-      left: 20px;
+      left: 70px;
       color: white;
-      top: 227px;
+      top: 150px;
     }
     h1 {
-      left: 20px;
+      left: 70px;
       color: white;
-      top: 305px;
+      top: 200px;
     }
 
     .mevlida-img {
@@ -227,11 +219,9 @@ P {
 
     h2 {
       font-size: 32px;
-      top: 127px;
     }
     h1 {
       font-size: 56px;
-      top: 200px;
     }
 
     .mevlida-img {
@@ -264,18 +254,16 @@ P {
     }
 
     .mevlida-img {
-      height: 600px;
-      left: 0;
+      height: 350px;
+      left: 50px;
     }
 
     h2 {
       font-size: 20px;
-      top: 150px;
     }
 
     h1 {
       font-size: 40px;
-      top: 220px;
       width: 250px;
     }
   }
@@ -284,15 +272,8 @@ P {
 @media (max-width: 540px) {
   section {
     h2 {
-      width: auto;
+      width: 500px;
     }
   }
 }
 
-@media (max-width: 420px) {
-  section {
-    .mevlida-img {
-      left: -100px;
-    }
-  }
-}
