--- a/src/app/main-content/my-work/project/project.component.scss
+++ b/src/app/main-content/my-work/project/project.component.scss
@@ -71,21 +71,19 @@
     font-family: "Poppins";
     font-weight: 400;
     color: #ff5959;
-
+    background: {
+      image: linear-gradient(45deg,#DE0000 50%, transparent 50%);
+      position: 100%;
+      size: 400%;
+    }
+    transition: background 300ms ease-in-out;
+    
     &:hover {
-      animation: gradient-animation 0.05s ease-in-out forwards;
+      background-position: 0;
       color: white;
-      transform: scale(1.1);
-      background: radial-gradient(
-          74.22% 74.22% at 19.79% 22.42%,
-          #ff5959 6.25%,
-          #ff5959 51.56%,
-          #de0000 100%
-        )
-        /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
     }
   }
-}
+  }
 
 .reversed {
   flex-direction: row-reverse;
@@ -128,9 +126,11 @@
     p {
       text-align: center;
     }
+  }
 
-    .left_side {
-      width: 80%;
+  .left_side {
+    img {
+      margin-top: 24px;
     }
   }
 }
