--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,15 +1,21 @@
-.footer_container {
-  height: 291px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+footer{
   background: radial-gradient(
       71.18% 335.57% at 28.82% -124.4%,
       #ff5959 6.25%,
       #ff5959 51.56%,
       #de0000 100%
     );
+}
+
+.footer_container {
+  height: 291px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+    max-width: 1440px;
+    margin: 0 auto;
+    width: 100%;
   
   span {
     display: flex;
@@ -29,7 +35,7 @@
   justify-content: space-between;
   align-items: center;
   height: 69px;
-  width: 1440px;
+  width:90%;
 }
 
 .icons_footer {
@@ -92,24 +98,6 @@
         font-weight: 600;
       }
     }
-  }
-}
-
-@media (max-width: 1460px) {
-  .footer {
-    width: 1240px;
-  }
-}
-
-@media (max-width: 1260px) {
-  .footer {
-    width: 1040px;
-  }
-}
-
-@media (max-width: 1060px) {
-  .footer {
-    width: 840px;
   }
 }
 
