--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -94,7 +94,7 @@
                     "contact.privacyPolicy1" | translate
                   }}</span>
                   &nbsp;
-                  <a class="montserrat" [routerLink]="['/privacy-policy']"
+                  <a class="montserrat" [routerLink]="['/privacy-policy']" (click)="scrollToTop()"
                     >{{ "contact.privacyPolicy3" | translate }}
                   </a>
                   &nbsp;<span class="montserrat span">
