--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -23,7 +23,7 @@
       <a
         class="montserrat"
         style="font-size: 18px"
-        [routerLink]="['/imprint']"
+        [routerLink]="['/imprint']" (click)="scrollToTop()"
         >{{ "footer.imprint" | translate }}</a
       >
     </div>
