--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -60,7 +60,7 @@ section {
 
     input {
       width: 500px;
-      height: auto;
+      height: 50px;
       padding: 15px 25px 15px 25px;
       gap: 10px;
       border-radius: 10px;
@@ -73,6 +73,7 @@ section {
       text-align: left;
       outline: none;
       cursor: pointer;
+      box-sizing: border-box;
 
       &:hover {
         border: 2px solid #ff5959;
@@ -102,7 +103,7 @@ section {
       text-align: left;
       cursor: pointer;
       outline: none;
-
+      box-sizing: border-box;
       &:focus {
         border: 1px solid #ff5959;
       }
@@ -137,12 +138,11 @@ section {
 
   a {
     text-decoration: none;
-    color: #ff5959;
+    color: #DE0000;
     cursor: pointer;
 
     &:hover {
       text-decoration: underline;
-      font-weight: 700;
     }
   }
 }
@@ -277,11 +277,11 @@ section {
   section {
     .contact_container {
       input {
-        width: 300px;
+        width: 100%;
       }
 
       textarea {
-        width: 300px;
+        width: 100%;
       }
     }
   }
@@ -304,7 +304,7 @@ section {
 
       input,
       textarea {
-        width: 500px;
+        width: 100%;
       }
       .contact_text {
         width: 100%;
@@ -329,17 +329,17 @@ section {
 
 @media (max-width: 700px) {
   section {
-    .contact_container {
-      input {
-        width: 300px;
-      }
-
-      textarea {
-        width: 300px;
-      }
+    form{
+      align-items: center;
     }
   }
+
+  .error-message{
+    width: auto;
+  }
 }
+
+
 
 @media (max-width: 480px) {
   section {
@@ -358,24 +358,22 @@ section {
       font-size: 14px;
     }
   }
-}
 
+  .go_up_container {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+}
 @media (max-width: 430px) {
   section {
     .contact_container {
       padding-left: 30px;
       padding-right: 30px;
-
-      input {
-        width: 200px;
-      }
-
-      textarea {
-        width: 200px;
-      }
     }
     h1 {
       padding-left: 30px;
     }
   }
 }
+
