--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -23,7 +23,7 @@ section {
 
 .mevlida-img {
   width: auto;
-  height: 917px;
+  height: 800px;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -137,10 +137,10 @@ P {
     h1 {
       font-size: 96px;
       width: 500px;
-      right:0px;
+      right:50px;
     }
     h2 {
-      width: 450px;
+      width: 500px;
       font-size: 48px;
       right: 50px;
     }
@@ -166,11 +166,11 @@ P {
 
     h2 {
       font-size: 40px;
-      right: 100px;
+      right: 50px;
     }
 
     .mevlida-img {
-      height: 800px;
+      height: 700px;
     }
 
     .background-img {
@@ -187,12 +187,12 @@ P {
     }
 
     h2 {
-      left: 70px;
+      left: 50px;
       color: white;
       top: 150px;
     }
     h1 {
-      left: 70px;
+      left: 50px;
       color: white;
       top: 200px;
     }
@@ -242,6 +242,14 @@ P {
       top: -140px;
       left: -100px;
     }
+
+    h2{
+      width:auto;
+    }
+
+    h1{
+      width:250px;
+    }
   }
 }
 
@@ -250,7 +258,7 @@ P {
     .background-img {
       width: 500px;
       top: -80px;
-      left: -190px;
+      left: -200px;
     }
 
     .mevlida-img {
@@ -264,15 +272,6 @@ P {
 
     h1 {
       font-size: 40px;
-      width: 250px;
-    }
-  }
-}
-
-@media (max-width: 540px) {
-  section {
-    h2 {
-      width: 500px;
     }
   }
 }
