--- a/src/app/main-content/my-work/my-work.component.scss
+++ b/src/app/main-content/my-work/my-work.component.scss
@@ -46,11 +46,11 @@ section {
 }
 
 .circle_3 {
-  width: 393px;
-  height: 393px;
+  width: 293px;
+  height: 293px;
   position: absolute;
   top: 560px;
-  left: -200px;
+  left: 0;
 }
 
 .circle_4 {
@@ -58,7 +58,7 @@ section {
   height: 652px;
   position: absolute;
   top: 820px;
-  right: -160px;
+  right: 0;
 }
 
 .circle_5 {
