--- a/src/app/main-content/my-work/project/project.component.scss
+++ b/src/app/main-content/my-work/project/project.component.scss
@@ -12,7 +12,7 @@
 
   .left_side {
     display: flex;
-    width: 50%;
+    // width: 50%;
   }
 
   img {
@@ -95,7 +95,7 @@
   }
 
   .left_side {
-    width: 70%;
+    // width: 70%;
   }
 
   .project_container {
