--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -42,12 +42,10 @@ section {
 
 .privacy-policy-container {
   width: 100%;
-  overflow: hidden;
   margin: 0 auto;
-
+  padding: 220px 100px 50px;
   position: relative;
-  padding-top: 220px;
-  padding-bottom: 50px;
+  max-width: 1440px;
 }
 
 .overflow-scroll-container {
@@ -61,8 +59,15 @@ section {
 .background-img {
   position: absolute;
   top: -100px;
-  left: -120px;
+  left: 0px;
   width: 300px;
+}
+
+@media(max-width: 850px) {
+  .privacy-policy-container {
+      padding-left: 50px;
+      padding-right: 50px;
+  }
 }
 
 @media (max-width: 550px) {
@@ -80,4 +85,18 @@ section {
       font-size: 20px;
     }
   }
+
+  .privacy-policy-container {
+    .longLink{
+      word-break: break-word;
+    }
+  }
+
+  .background-img {
+    width: 500px;
+    left:-230px;
+    top:-300px;
+  }
+
+  
 }
