privacy policy auf english

--- a/src/app/privacy-policy/german/german.component.html
+++ b/src/app/privacy-policy/german/german.component.html
@@ -1,4 +1,4 @@
-<!-- <section>
+<section>
     <app-header></app-header>
     <div class="privacy-policy-container">
         <img class="background-img" src="./assets/img/o-mitte.svg" alt="">
@@ -74,17 +74,7 @@
 <p>Wenn Sie Fragen zum Datenschutz haben, schreiben Sie uns bitte eine E-Mail oder wenden Sie sich direkt an die für den Datenschutz verantwortliche Person in unserer Organisation:</p>
 <p></p><p><em>Die Datenschutzerklärung wurde mithilfe der activeMind AG erstellt, den Experten für <a href="https://www.activemind.de/datenschutz/datenschutzbeauftragter/" target="_blank" rel="noopener">externe Datenschutzbeauftragte</a> (Version #2020-09-30).</em></p>
 
-    </div>s
     </div>
-</section> -->
-<!--  -->
-<div >
-    @if (this.languages.languageEnglish == true) {
-        <app-english></app-english>
-     
-    } @else {
-        <app-german></app-german>
-    }
-  </div>
+    </div>
+</section>
 
-  
